--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.my-masonry-grid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-left: -20px;
+}
+.my-masonry-grid_column {
+  border-left: 20px solid transparent;
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div { /* change div to reference your elements in <masonry> */
+  background: #ddd;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+nav {
+  background-color: black;
+  margin-bottom: 10px;
+}
+
+nav ul {
+  margin: 0 0 10px 0;
+  display: flex;
+  padding: 10px;
+  list-style-type: none;
+  justify-content:space-around;
+}
+
+nav ul li{
+  padding: 5px;
+  font-size: 30px;
+}
+
+.Link {
+  text-decoration: none;
+}
+.Link:focus{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
